did some work in header section

--- a/Proj_2_OnlineEducationWebsiteResponsive/index.html
+++ b/Proj_2_OnlineEducationWebsiteResponsive/index.html
@@ -12,6 +12,23 @@
     <title>Responsive Online Education Website</title>
   </head>
   <body>
+    <!-- header section starts -->
+    <header>
+      <a href="#" class="logo"
+        ><i class="fa-duotone fa-solid fa-graduation-cap"></i>Logo</a
+      >
+      <nav class="navbar">
+        <ul>
+          <li><a href="#home" class="active">Home</a></li>
+          <li><a href="#about">about</a></li>
+          <li><a href="#teacher">teacher</a></li>
+          <li><a href="#course">course</a></li>
+          <li><a href="#review">review</a></li>
+          <li><a href="#contact">contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <!-- header section end -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./script.js"></script>
   </body>
