--- a/Proj_2_OnlineEducationWebsiteResponsive/index.html
+++ b/Proj_2_OnlineEducationWebsiteResponsive/index.html
@@ -27,8 +27,13 @@
           <li><a href="#contact">contact</a></li>
         </ul>
       </nav>
+      <div class="fas fa-bars"></div>
     </header>
     <!-- header section end -->
+
+    <!-- home section starts -->
+
+    <!-- home section end -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./script.js"></script>
   </body>
