--- a/Proj_2_OnlineEducationWebsiteResponsive/index.html
+++ b/Proj_2_OnlineEducationWebsiteResponsive/index.html
@@ -32,7 +32,45 @@
     <!-- header section end -->
 
     <!-- home section starts -->
+    <section class="home" id="home">
+      <div class="content">
+        <h1>learn online from home</h1>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad sed magni
+          veritatis tempore, sint fugit dolore minima officia, laudantium
+          ducimus enim temporibus voluptatum voluptates sit unde accusantium
+          rerum quibusdam quia eligendi voluptate beatae cum incidunt.
+        </p>
+        <a href="#"><button>Discover more</button></a>
+      </div>
 
+      <div class="box-container">
+        <div class="box">
+          <i class="fas fa-graduation-cap"></i>
+          <h3>Trending courses</h3>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo,
+            voluptatibus?
+          </p>
+        </div>
+        <div class="box">
+          <i class="fas fa-fire"></i>
+          <h3>Free trial</h3>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo,
+            voluptatibus?
+          </p>
+        </div>
+        <div class="box">
+          <i class="fas fa-award"></i>
+          <h3>Certifications</h3>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo,
+            voluptatibus?
+          </p>
+        </div>
+      </div>
+    </section>
     <!-- home section end -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./script.js"></script>
