home section created

--- a/Proj_2_OnlineEducationWebsiteResponsive/index.html
+++ b/Proj_2_OnlineEducationWebsiteResponsive/index.html
@@ -72,6 +72,10 @@
       </div>
     </section>
     <!-- home section end -->
+
+    <!-- about section starts -->
+
+    <!-- about section end -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./script.js"></script>
   </body>
