--- a/Proj_2_OnlineEducationWebsiteResponsive/index.html
+++ b/Proj_2_OnlineEducationWebsiteResponsive/index.html
@@ -74,7 +74,27 @@
     <!-- home section end -->
 
     <!-- about section starts -->
-
+    <section class="about" id="about">
+      <h1 class="heading">About us</h1>
+      <h3 class="title">Start your journey with us</h3>
+      <div class="row">
+        <div class="content">
+          <h3>
+            start your journey to be a better life with our practical courses
+          </h3>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio
+            tempore id, praesentium corrupti sint laborum quia necessitatibus
+            unde excepturi incidunt, quisquam aperiam. Cum sint explicabo
+            repellat animi hic iure pariatur!
+          </p>
+          <a href="#"><button>Learn more</button></a>
+        </div>
+        <div class="image">
+          <img src="images/about us.jpg" alt="" />
+        </div>
+      </div>
+    </section>
     <!-- about section end -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./script.js"></script>
