add teachers section with css

--- a/Proj_2_OnlineEducationWebsiteResponsive/index.html
+++ b/Proj_2_OnlineEducationWebsiteResponsive/index.html
@@ -12,7 +12,7 @@
     <title>Responsive Online Education Website</title>
   </head>
   <body>
-    <!-- header section starts -->
+    <!------------------------- header section starts ------------------------->
     <header>
       <a href="#" class="logo"
         ><i class="fa-duotone fa-solid fa-graduation-cap"></i>Logo</a
@@ -31,7 +31,7 @@
     </header>
     <!-- header section end -->
 
-    <!-- home section starts -->
+    <!------------------------- home section starts ------------------------->
     <section class="home" id="home">
       <div class="content">
         <h1>learn online from home</h1>
@@ -73,7 +73,7 @@
     </section>
     <!-- home section end -->
 
-    <!-- about section starts -->
+    <!------------------------- about section starts ------------------------->
     <section class="about" id="about">
       <h1 class="heading">About us</h1>
       <h3 class="title">Start your journey with us</h3>
@@ -96,6 +96,65 @@
       </div>
     </section>
     <!-- about section end -->
+
+    <!------------------------ teacher section starts ------------------------>
+
+    <section id="teacher" class="teacher">
+      <h1 class="heading">Our teacher</h1>
+      <h3 class="title">meet professional trainers</h3>
+      <div class="card-container">
+        <div class="card">
+          <img src="./images/man1.jpg" alt="" />
+          <h3>Ali akbar</h3>
+          <p>i love teaching</p>
+          <div class="icons">
+            <a href="#" class="fab fa-facebook"></a>
+            <a href="#" class="fab fa-twitter"></a>
+            <a href="#" class="fab fa-instagram"></a>
+            <a href="#" class="fab fa-github"></a>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./images/woman1.jpg" alt="" />
+          <h3>Fozia khalid</h3>
+          <p>i learn and explore</p>
+          <div class="icons">
+            <a href="#" class="fab fa-facebook"></a>
+            <a href="#" class="fab fa-twitter"></a>
+            <a href="#" class="fab fa-instagram"></a>
+            <a href="#" class="fab fa-github"></a>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./images/man2.jpg" alt="" />
+          <h3>Noman asif</h3>
+          <p>i love maths</p>
+          <div class="icons">
+            <a href="#" class="fab fa-facebook"></a>
+            <a href="#" class="fab fa-twitter"></a>
+            <a href="#" class="fab fa-instagram"></a>
+            <a href="#" class="fab fa-github"></a>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./images/man3.jpg" alt="" />
+          <h3>Hamza yasir</h3>
+          <p>i like computer science</p>
+          <div class="icons">
+            <a href="#" class="fab fa-facebook"></a>
+            <a href="#" class="fab fa-twitter"></a>
+            <a href="#" class="fab fa-instagram"></a>
+            <a href="#" class="fab fa-github"></a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- teacher section end -->
+
+    <!------------------------ course section starts ------------------------>
+
+    <!-- course section end -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./script.js"></script>
   </body>
