add courses section

--- a/Proj_2_OnlineEducationWebsiteResponsive/index.html
+++ b/Proj_2_OnlineEducationWebsiteResponsive/index.html
@@ -152,9 +152,70 @@
 
     <!-- teacher section end -->
 
-    <!------------------------ course section starts ------------------------>
+    <!------------------------ courses section starts ------------------------>
 
-    <!-- course section end -->
+    <section id="courses" class="courses">
+      <h1 class="heading">Our courses</h1>
+      <h3 class="title">upgrade your skills with newest courses</h3>
+      <div class="box-container">
+        <div class="box">
+          <i class="fab fa-html5"></i>
+          <h3>html5</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat,
+            modi?
+          </p>
+        </div>
+        <div class="box">
+          <i class="fab fa-css3-alt"></i>
+          <h3>css3</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat,
+            modi?
+          </p>
+        </div>
+        <div class="box">
+          <i class="fab fa-js-square"></i>
+          <h3>javascript</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat,
+            modi?
+          </p>
+        </div>
+        <div class="box">
+          <i class="fa fa-laptop-code"></i>
+          <h3>Web development</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat,
+            modi?
+          </p>
+        </div>
+        <div class="box">
+          <i class="fa fa-search"></i>
+          <h3>Seo marketing</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat,
+            modi?
+          </p>
+        </div>
+        <div class="box">
+          <i class="fa fa-paint-brush"></i>
+          <h3>graphic design</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat,
+            modi?
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- courses section end -->
+
+    <!------------------------ review section starts ------------------------>
+
+    <section class="review" id="review"></section>
+
+    <!-- review section end -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./script.js"></script>
   </body>
