complete review section

--- a/Proj_2_OnlineEducationWebsiteResponsive/index.html
+++ b/Proj_2_OnlineEducationWebsiteResponsive/index.html
@@ -213,7 +213,102 @@
 
     <!------------------------ review section starts ------------------------>
 
-    <section class="review" id="review"></section>
+    <section class="review" id="review">
+      <h1 class="heading">Students review</h1>
+      <h3 class="title">What our students says about us</h3>
+      <div class="box-container">
+        <div class="box">
+          <img src="./images/students/boy1.jpg" alt="" />
+          <h3>Ali ahmad</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos,
+            impedit!
+          </p>
+          <div class="stars">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </div>
+        </div>
+        <div class="box">
+          <img src="./images/students/girl1.jpg" alt="" />
+          <h3>Farah nawab</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos,
+            impedit!
+          </p>
+          <div class="stars">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+          </div>
+        </div>
+        <div class="box">
+          <img src="./images/students/boy2.jpg" alt="" />
+          <h3>Asif khan</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos,
+            impedit!
+          </p>
+          <div class="stars">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </div>
+        </div>
+        <div class="box">
+          <img src="./images/students/girl2.jpg" alt="" />
+          <h3>Bushra waqar</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos,
+            impedit!
+          </p>
+          <div class="stars">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </div>
+        </div>
+        <div class="box">
+          <img src="./images/students/girl3.jpg" alt="" />
+          <h3>Nida qasim</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos,
+            impedit!
+          </p>
+          <div class="stars">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+          </div>
+        </div>
+        <div class="box">
+          <img src="./images/students/girl4.jpg" alt="" />
+          <h3>Sara waseen</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos,
+            impedit!
+          </p>
+          <div class="stars">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- review section end -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
