add contact us section

--- a/Proj_2_OnlineEducationWebsiteResponsive/index.html
+++ b/Proj_2_OnlineEducationWebsiteResponsive/index.html
@@ -311,6 +311,40 @@
     </section>
 
     <!-- review section end -->
+
+    <!------------------------ contact us section starts ------------------------>
+    <section class="contact" id="contact">
+      <h1 class="heading">Contact us</h1>
+      <h3 class="title">
+        Ready to learn together? Reach out and let's start your educational
+        journey!
+      </h3>
+      <div class="row">
+        <div class="img">
+          <img src="./images/9679160.jpg" alt="" />
+        </div>
+        <div class="form-container">
+          <form action="">
+            <input type="text" placeholder="Full name" />
+            <input type="text" placeholder="Enter e-mail" />
+            <input type="text" placeholder="phone" />
+            <textarea
+              name=""
+              id=""
+              cols="30"
+              rows="10"
+              placeholder="message"
+            ></textarea>
+            <input type="submit" value="message" />
+          </form>
+        </div>
+      </div>
+    </section>
+    <!-- contact us section end -->
+
+    <!------------------------ footer section starts ------------------------>
+    <section class="footer" id="footer"></section>
+    <!-- footer section end -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./script.js"></script>
   </body>
