--- a/Proj_2_OnlineEducationWebsiteResponsive/index.html
+++ b/Proj_2_OnlineEducationWebsiteResponsive/index.html
@@ -22,7 +22,7 @@
           <li><a href="#home" class="active">Home</a></li>
           <li><a href="#about">about</a></li>
           <li><a href="#teacher">teacher</a></li>
-          <li><a href="#course">course</a></li>
+          <li><a href="#courses">course</a></li>
           <li><a href="#review">review</a></li>
           <li><a href="#contact">contact</a></li>
         </ul>
@@ -343,7 +343,18 @@
     <!-- contact us section end -->
 
     <!------------------------ footer section starts ------------------------>
-    <section class="footer" id="footer"></section>
+    <section class="footer" id="footer">
+      <div class="icons">
+        <a href="" class="fab fa-facebook"></a>
+        <a href="" class="fab fa-twitter"></a>
+        <a href="" class="fab fa-instagram"></a>
+        <a href="" class="fab fa-github"></a>
+        <a href="" class="fab fa-pinterest"></a>
+      </div>
+      <div class="credit">
+        created by <span>M. Ayaz sarmad</span> || all rights reserved
+      </div>
+    </section>
     <!-- footer section end -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./script.js"></script>
